--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.1",
     "babel-jest": "^26.6.1",
     "babel-preset-gatsby": "^0.5.14",
+    "cypress": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.1",
     "prettier": "2.1.2",
-    "react-test-renderer": "^17.0.1"
+    "react-test-renderer": "^17.0.1",
+    "start-server-and-test": "^1.11.5"
   },
   "keywords": [
     "gatsby"
@@ -33,6 +37,8 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "cy:open": "cypress open",
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
