--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "gatsby": "^2.24.89",
     "gatsby-image": "^2.4.21",
